Homework-3/sg.tf
resource "aws_security_group" "hw3-sg" {
  name        = "hw3-security-group"
  description = "Allow SSH, HTTP, HTTPS, MySQL"
  vpc_id     = aws_vpc.main.id
 

  ingress {
    description = "TLS from VPC"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  
  ingress {
    description = "TLS from VPC"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

   egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
    Name = "hw3-sg"
  }
}
